--- a/static/css/styleRegression.css
+++ b/static/css/styleRegression.css
@@ -90,8 +90,9 @@ strong{
 }
 
 #result {
-    max-height: calc(100vh - 200px); /* Ajuste o valor conforme necessário */
-    overflow-y: auto;
+    max-height: none; /* Remove o limite de altura */
+    overflow: visible; /* Permite o crescimento natural */
+    margin-top: 3%;
 }
 
 footer {
